set width for selectors table phone number to prevent wrapping
git-svn-id: https://svn.library.cornell.edu/cul7theme/trunk@577 29d2e8ee-217f-479a-8a37-9775d62f972e

--- a/css/cul/_miscellaneous.scss
+++ b/css/cul/_miscellaneous.scss
@@ -121,6 +121,10 @@
     z-index: 100;
 }
 
+// Selectors table - width of phone number so there is no wrapping
+// -----------------------------------------------------------------
+.selector-phone { width: 15%; }
+
 
 
 // MEDIA QUERIES
